# pong

./: CMakeLists.txt  README.md  compile_commands.json
src/: app.cpp  geometry.cpp  main.cpp
src/include/: app.hpp  geometry.hpp
